# basket_hud

./: .gitignore  README.md  UI-SPEC.md  main.py  main.spec  manager.py  manager.spec  overlay.html  player-full.html  player.html  pyproject.toml  requirements-dev.txt  requirements.txt  server.ps1  start_server.bat
broadcast_control/: __init__.py
broadcast_control/diagnostics/: __init__.py  health.py
broadcast_control/models/: __init__.py  defaults.py  schemas.py
broadcast_control/scraper/: scraper_service.py
broadcast_control/scraper/flashscore/: __init__.py  client.py  match_parser.py  player_parser.py  stats_parser.py
broadcast_control/scraper/nba/: __init__.py  photos.py  roster.py
broadcast_control/services/: __init__.py  pid.py  process.py
broadcast_control/state/: __init__.py  paths.py  store.py
installer/: BasketballBroadcastControl.iss
js/: overlay-view.js  player-card-view.js  player-full-view.js
js/frontend-core/: animation-manager.js  basketball-format.js  dom.js  state-client.js  urls.js
json/: config.json  config.last_good.json  last_good_state.json  live_state.json  nba_players_cache.json  player.last_good.json  player_candidates.json  player_candidates.last_good.json  preview_state.json  result.json  result.last_good.json
scripts/: build-installer.ps1  build.ps1  smoke.ps1
tests/: test_pid_manager.py  test_state_store.py
