[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basketball-broadcast-control"
version = "0.1.0"
description = "Broadcast Control Room for basketball streamer graphics"
requires-python = ">=3.13,<3.14"
dependencies = [
  "customtkinter==5.2.2",
  "psutil==7.2.2",
  "pydantic==2.12.5",
  "selenium==4.44.0",
  "webdriver-manager==4.1.1",
]

[project.optional-dependencies]
build = ["pyinstaller==6.20.0"]
test = ["pytest>=8.0", "pytest-mock>=3.14", "pytest-timeout>=2.3"]
overlay = ["playwright>=1.50"]

[tool.setuptools.packages.find]
include = ["broadcast_control*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
